--- a/contac.html
+++ b/contac.html
@@ -3,6 +3,14 @@
     <head>  
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R47DKKFHWV"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-R47DKKFHWV');
+        </script>
         <title>Contacto</title>
         <link rel="stylesheet" href="style.css">
     </head>
