--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>la stevia: que es y para que sirve y que dice la ciencia</title>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R47DKKFHWV"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-R47DKKFHWV');
+        </script>
+        <title>la stevia:que es y para que sirve y que dice la ciencia</title>
     <link rel="stylesheet" href="style.css">
     </head>    
     <body>
