--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R47DKKFHWV"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-R47DKKFHWV');
-        </script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R47DKKFHWW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R47DKKFHWW');
+</script>
         <title>la stevia:que es y para que sirve y que dice la ciencia</title>
     <link rel="stylesheet" href="style.css">
     </head>    
@@ -134,4 +135,5 @@
         </footer>
         <a href="index.html"class="boton">atras</a>
     </body>
+
 </html>
